5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1601_2043.log
== TEST (2019-03-25 18:36:01) 
-- CODE:
notaA = int(input("Nota A:"))
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:37:14) 
-- CODE:
notaA = int(input("Nota A:"))
notaB = int(input("Nota B:"))
notaC = int(input("Nota C:"))
notaD = int(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    notaB = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:38:39) 
-- CODE:
notaA = int(input("Nota A:"))
notaB = int(input("Nota B:"))
notaC = int(input("Nota C:"))
notaD = int(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/4
print (Nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    notaB = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:38:58) 
-- CODE:
notaA = int(input("Nota A:"))
notaB = int(input("Nota B:"))
notaC = int(input("Nota C:"))
notaD = int(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (Nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    notaB = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:39:13) 
-- CODE:
notaA = int(input("Nota A:"))
notaB = int(input("Nota B:"))
notaC = int(input("Nota C:"))
notaD = int(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)

-- EXECUTION TIME:
0.131379
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:26) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)

-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:32) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:42) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:43) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:43) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:43) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:43) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:43) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:43) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:39:44) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- EXECUTION TIME:
0.161311
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:39:45) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- EXECUTION TIME:
0.150545
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:45) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:39:45) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- EXECUTION TIME:
0.186439
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:39:46) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- EXECUTION TIME:
0.165223
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:46) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:39:56) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:40:04) 
-- CODE:
notaA = float(input("Nota A:"))
notaB = float(input("Nota B:"))
notaC = float(input("Nota C:"))
notaD = float(input("Nota D:"))
AlunoA = notaA*1
AlunoB = notaB*2
AlunoC = notaC*3
AlunoD = notaD*4
Nota = (AlunoA+AlunoB+AlunoC+AlunoD)/10
print (round(Nota,2))
-- EXECUTION TIME:
0.201184
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
